--- a/dhcpctl/Makefile.am
+++ b/dhcpctl/Makefile.am
@@ -1,5 +1,3 @@
-BINDLIBDIR = @BINDDIR@/lib
-
 bin_PROGRAMS = omshell
 lib_LIBRARIES = libdhcpctl.a
 noinst_PROGRAMS = cltest
@@ -8,12 +6,16 @@ EXTRA_DIST = $(man_MANS)
 
 omshell_SOURCES = omshell.c
 omshell_LDADD = libdhcpctl.a ../common/libdhcp.a ../omapip/libomapi.a \
-	        $(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-	        $(BINDLIBDIR)/libisccfg.a $(BINDLIBDIR)/libisc.a
+		@BINDLIBIRSDIR@/libirs.a \
+		@BINDLIBDNSDIR@/libdns.a \
+	        @BINDLIBISCCFGDIR@/libisccfg.a \
+		@BINDLIBISCDIR@/libisc.a
 
 libdhcpctl_a_SOURCES = dhcpctl.c callback.c remote.c
 
 cltest_SOURCES = cltest.c
 cltest_LDADD = libdhcpctl.a ../common/libdhcp.a ../omapip/libomapi.a \
-	       $(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-               $(BINDLIBDIR)/libisccfg.a $(BINDLIBDIR)/libisc.a
+	       @BINDLIBIRSDIR@/libirs.a \
+	       @BINDLIBDNSDIR@/libdns.a \
+	       @BINDLIBISCCFGDIR@/libisccfg.a \
+	       @BINDLIBISCDIR@/libisc.a
