--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -1,7 +1,5 @@
 SUBDIRS = .
 
-BINDLIBDIR = @BINDDIR@/lib
-
 AM_CPPFLAGS = $(ATF_CFLAGS) -I$(top_srcdir)/includes
 
 EXTRA_DIST = Atffile
@@ -14,27 +12,35 @@ ATF_TESTS += alloc_unittest dns_unittest misc_unittest ns_name_unittest
 
 alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
 alloc_unittest_LDADD = $(ATF_LDFLAGS)
-alloc_unittest_LDADD += ../libdhcp.a  \
-	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a  $(BINDLIBDIR)/libisc.a
+alloc_unittest_LDADD += ../libdhcp.a ../../omapip/libomapi.a \
+	@BINDLIBIRSDIR@/libirs.a \
+	@BINDLIBDNSDIR@/libdns.a \
+	@BINDLIBISCCFGDIR@/libisccfg.a  \
+	@BINDLIBISCDIR@/libisc.a
 
 dns_unittest_SOURCES = dns_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
 dns_unittest_LDADD = $(ATF_LDFLAGS)
-dns_unittest_LDADD += ../libdhcp.a  \
-	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a  $(BINDLIBDIR)/libisc.a
+dns_unittest_LDADD += ../libdhcp.a ../../omapip/libomapi.a \
+	@BINDLIBIRSDIR@/libirs.a \
+	@BINDLIBDNSDIR@/libdns.a \
+	@BINDLIBISCCFGDIR@/libisccfg.a  \
+	@BINDLIBISCDIR@/libisc.a
 
 misc_unittest_SOURCES = misc_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
 misc_unittest_LDADD = $(ATF_LDFLAGS)
-misc_unittest_LDADD += ../libdhcp.a  \
-	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a  $(BINDLIBDIR)/libisc.a
+misc_unittest_LDADD += ../libdhcp.a ../../omapip/libomapi.a \
+	@BINDLIBIRSDIR@/libirs.a \
+	@BINDLIBDNSDIR@/libdns.a \
+	@BINDLIBISCCFGDIR@/libisccfg.a  \
+	@BINDLIBISCDIR@/libisc.a
 
 ns_name_unittest_SOURCES = ns_name_test.c $(top_srcdir)/tests/t_api_dhcp.c
 ns_name_unittest_LDADD = $(ATF_LDFLAGS)
-ns_name_unittest_LDADD += ../libdhcp.a  \
-	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a  $(BINDLIBDIR)/libisc.a
+ns_name_unittest_LDADD += ../libdhcp.a ../../omapip/libomapi.a \
+	@BINDLIBIRSDIR@/libirs.a \
+	@BINDLIBDNSDIR@/libdns.a \
+	@BINDLIBISCCFGDIR@/libisccfg.a  \
+	@BINDLIBISCDIR@/libisc.a
 
 check: $(ATF_TESTS)
 	@if test $(top_srcdir) != ${top_builddir}; then \
