--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -111,9 +111,10 @@ alloc_unittest_OBJECTS = $(am_alloc_unittest_OBJECTS)
 am__DEPENDENCIES_1 =
 @HAVE_ATF_TRUE@alloc_unittest_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 @HAVE_ATF_TRUE@	../libdhcp.a ../../omapip/libomapi.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 am__dns_unittest_SOURCES_DIST = dns_unittest.c \
 	$(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@am_dns_unittest_OBJECTS = dns_unittest.$(OBJEXT) \
@@ -121,9 +122,10 @@ am__dns_unittest_SOURCES_DIST = dns_unittest.c \
 dns_unittest_OBJECTS = $(am_dns_unittest_OBJECTS)
 @HAVE_ATF_TRUE@dns_unittest_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 @HAVE_ATF_TRUE@	../libdhcp.a ../../omapip/libomapi.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 am__misc_unittest_SOURCES_DIST = misc_unittest.c \
 	$(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@am_misc_unittest_OBJECTS = misc_unittest.$(OBJEXT) \
@@ -131,9 +133,10 @@ am__misc_unittest_SOURCES_DIST = misc_unittest.c \
 misc_unittest_OBJECTS = $(am_misc_unittest_OBJECTS)
 @HAVE_ATF_TRUE@misc_unittest_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 @HAVE_ATF_TRUE@	../libdhcp.a ../../omapip/libomapi.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 am__ns_name_unittest_SOURCES_DIST = ns_name_test.c \
 	$(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@am_ns_name_unittest_OBJECTS = ns_name_test.$(OBJEXT) \
@@ -141,9 +144,10 @@ am__ns_name_unittest_SOURCES_DIST = ns_name_test.c \
 ns_name_unittest_OBJECTS = $(am_ns_name_unittest_OBJECTS)
 @HAVE_ATF_TRUE@ns_name_unittest_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 @HAVE_ATF_TRUE@	../libdhcp.a ../../omapip/libomapi.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -263,7 +267,13 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BINDCONFIG = @BINDCONFIG@
 BINDDIR = @BINDDIR@
+BINDIOMUX = @BINDIOMUX@
+BINDLIBDNSDIR = @BINDLIBDNSDIR@
+BINDLIBIRSDIR = @BINDLIBIRSDIR@
+BINDLIBISCCFGDIR = @BINDLIBISCCFGDIR@
+BINDLIBISCDIR = @BINDLIBISCDIR@
 BINDSRCDIR = @BINDSRCDIR@
+BINDSUBDIR = @BINDSUBDIR@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -361,34 +371,37 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = .
-BINDLIBDIR = @BINDDIR@/lib
 AM_CPPFLAGS = $(ATF_CFLAGS) -I$(top_srcdir)/includes
 EXTRA_DIST = Atffile
 ATF_TESTS = $(am__append_1)
 @HAVE_ATF_TRUE@alloc_unittest_SOURCES = test_alloc.c $(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@alloc_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
-@HAVE_ATF_TRUE@	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	../../omapip/libomapi.a \
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 @HAVE_ATF_TRUE@dns_unittest_SOURCES = dns_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@dns_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
-@HAVE_ATF_TRUE@	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	../../omapip/libomapi.a \
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 @HAVE_ATF_TRUE@misc_unittest_SOURCES = misc_unittest.c $(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@misc_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
-@HAVE_ATF_TRUE@	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	../../omapip/libomapi.a \
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 @HAVE_ATF_TRUE@ns_name_unittest_SOURCES = ns_name_test.c $(top_srcdir)/tests/t_api_dhcp.c
 @HAVE_ATF_TRUE@ns_name_unittest_LDADD = $(ATF_LDFLAGS) ../libdhcp.a \
-@HAVE_ATF_TRUE@	../../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libdns.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisccfg.a \
-@HAVE_ATF_TRUE@	$(BINDLIBDIR)/libisc.a
+@HAVE_ATF_TRUE@	../../omapip/libomapi.a \
+@HAVE_ATF_TRUE@	@BINDLIBIRSDIR@/libirs.a \
+@HAVE_ATF_TRUE@	@BINDLIBDNSDIR@/libdns.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCCFGDIR@/libisccfg.a \
+@HAVE_ATF_TRUE@	@BINDLIBISCDIR@/libisc.a
 all: all-recursive
 
 .SUFFIXES:
