--- a/dhcpctl/Makefile.in
+++ b/dhcpctl/Makefile.in
@@ -145,15 +145,15 @@ PROGRAMS = $(bin_PROGRAMS) $(noinst_PROGRAMS)
 am_cltest_OBJECTS = cltest.$(OBJEXT)
 cltest_OBJECTS = $(am_cltest_OBJECTS)
 cltest_DEPENDENCIES = libdhcpctl.a ../common/libdhcp.a \
-	../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a \
-	$(BINDLIBDIR)/libisc.a
+	../omapip/libomapi.a @BINDLIBIRSDIR@/libirs.a \
+	@BINDLIBDNSDIR@/libdns.a @BINDLIBISCCFGDIR@/libisccfg.a \
+	@BINDLIBISCDIR@/libisc.a
 am_omshell_OBJECTS = omshell.$(OBJEXT)
 omshell_OBJECTS = $(am_omshell_OBJECTS)
 omshell_DEPENDENCIES = libdhcpctl.a ../common/libdhcp.a \
-	../omapip/libomapi.a $(BINDLIBDIR)/libirs.a \
-	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a \
-	$(BINDLIBDIR)/libisc.a
+	../omapip/libomapi.a @BINDLIBIRSDIR@/libirs.a \
+	@BINDLIBDNSDIR@/libdns.a @BINDLIBISCCFGDIR@/libisccfg.a \
+	@BINDLIBISCDIR@/libisc.a
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -228,7 +228,13 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BINDCONFIG = @BINDCONFIG@
 BINDDIR = @BINDDIR@
+BINDIOMUX = @BINDIOMUX@
+BINDLIBDNSDIR = @BINDLIBDNSDIR@
+BINDLIBIRSDIR = @BINDLIBIRSDIR@
+BINDLIBISCCFGDIR = @BINDLIBISCCFGDIR@
+BINDLIBISCDIR = @BINDLIBISCDIR@
 BINDSRCDIR = @BINDSRCDIR@
+BINDSUBDIR = @BINDSUBDIR@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -325,20 +331,23 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-BINDLIBDIR = @BINDDIR@/lib
 lib_LIBRARIES = libdhcpctl.a
 man_MANS = omshell.1 dhcpctl.3
 EXTRA_DIST = $(man_MANS)
 omshell_SOURCES = omshell.c
 omshell_LDADD = libdhcpctl.a ../common/libdhcp.a ../omapip/libomapi.a \
-	        $(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-	        $(BINDLIBDIR)/libisccfg.a $(BINDLIBDIR)/libisc.a
+		@BINDLIBIRSDIR@/libirs.a \
+		@BINDLIBDNSDIR@/libdns.a \
+	        @BINDLIBISCCFGDIR@/libisccfg.a \
+		@BINDLIBISCDIR@/libisc.a
 
 libdhcpctl_a_SOURCES = dhcpctl.c callback.c remote.c
 cltest_SOURCES = cltest.c
 cltest_LDADD = libdhcpctl.a ../common/libdhcp.a ../omapip/libomapi.a \
-	       $(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-               $(BINDLIBDIR)/libisccfg.a $(BINDLIBDIR)/libisc.a
+	       @BINDLIBIRSDIR@/libirs.a \
+	       @BINDLIBDNSDIR@/libdns.a \
+	       @BINDLIBISCCFGDIR@/libisccfg.a \
+	       @BINDLIBISCDIR@/libisc.a
 
 all: all-am
 
