--- a/omapip/Makefile.am
+++ b/omapip/Makefile.am
@@ -1,5 +1,3 @@
-BINDLIBDIR = @BINDDIR@/lib
-
 lib_LIBRARIES = libomapi.a
 noinst_PROGRAMS = svtest
 
@@ -12,6 +10,8 @@ man_MANS = omapi.3
 EXTRA_DIST = $(man_MANS)
 
 svtest_SOURCES = test.c
-svtest_LDADD = libomapi.a $(BINDLIBDIR)/libirs.a $(BINDLIBDIR)/libdns.a \
-		$(BINDLIBDIR)/libisccfg.a $(BINDLIBDIR)/libisc.a
-
+svtest_LDADD = libomapi.a \
+	       @BINDLIBIRSDIR@/libirs.a \
+	       @BINDLIBDNSDIR@/libdns.a \
+	       @BINDLIBISCCFGDIR@/libisccfg.a \
+	       @BINDLIBISCDIR@/libisc.a
