Solved the --with-libbind vs distchek issue

--- a/Makefile.in
+++ b/Makefile.in
@@ -88,6 +88,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
+@HAVE_BINDDIR_TRUE@am__append_1 = bind/Makefile.in bind/bind.tar.gz bind/version.tmp
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -261,6 +262,7 @@ CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DISTCHECK_ATF_CONFIGURE_FLAG = @DISTCHECK_ATF_CONFIGURE_FLAG@
+DISTCHECK_LIBBIND_CONFIGURE_FLAG = @DISTCHECK_LIBBIND_CONFIGURE_FLAG@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
@@ -352,33 +354,36 @@ top_srcdir = @top_srcdir@
 #
 # We have a lot of files that we want shipped with the distribution.
 #
-EXTRA_DIST = RELNOTES LICENSE \
-	     contrib/3.0b1-lease-convert contrib/dhclient-tz-exithook.sh \
-	     contrib/dhcp.spec contrib/sethostname.sh contrib/solaris.init \
-	     contrib/ms2isc/Registry.pm contrib/ms2isc/ms2isc.pl \
-	     contrib/ms2isc/readme.txt contrib/ldap/dhcpd-conf-to-ldap \
-	     contrib/ldap/dhcp.schema contrib/ldap/README.ldap \
-             contrib/dhcp-lease-list.pl \
-	     doc/DHCPv4-over-DHCPv6 \
-	     doc/IANA-arp-parameters doc/Makefile doc/References.html \
-	     doc/References.txt doc/References.xml doc/api+protocol \
-	     doc/ja_JP.eucJP/dhclient-script.8 doc/ja_JP.eucJP/dhclient.8 \
-	     doc/ja_JP.eucJP/dhclient.conf.5 doc/ja_JP.eucJP/dhclient.leases.5 \
-	     doc/ja_JP.eucJP/dhcp-eval.5 doc/ja_JP.eucJP/dhcp-options.5 \
-	     doc/examples/dhclient-dhcpv6.conf doc/examples/dhcpd-dhcpv6.conf \
-	     doc/devel/arch.dox doc/devel/atf.dox doc/devel/contrib.dox \
-	     doc/devel/debug.dox doc/devel/isc-logo.jpg doc/devel/mainpage.dox \
-	     doc/devel/omapi.dox doc/devel/qa.dox \
-	     bind/Makefile.in bind/bind.tar.gz bind/version.tmp \
-	     common/tests/Atffile server/tests/Atffile
+EXTRA_DIST = RELNOTES LICENSE contrib/3.0b1-lease-convert \
+	contrib/dhclient-tz-exithook.sh contrib/dhcp.spec \
+	contrib/sethostname.sh contrib/solaris.init \
+	contrib/ms2isc/Registry.pm contrib/ms2isc/ms2isc.pl \
+	contrib/ms2isc/readme.txt contrib/ldap/dhcpd-conf-to-ldap \
+	contrib/ldap/dhcp.schema contrib/ldap/README.ldap \
+	contrib/dhcp-lease-list.pl doc/DHCPv4-over-DHCPv6 \
+	doc/IANA-arp-parameters doc/Makefile doc/References.html \
+	doc/References.txt doc/References.xml doc/api+protocol \
+	doc/ja_JP.eucJP/dhclient-script.8 doc/ja_JP.eucJP/dhclient.8 \
+	doc/ja_JP.eucJP/dhclient.conf.5 \
+	doc/ja_JP.eucJP/dhclient.leases.5 doc/ja_JP.eucJP/dhcp-eval.5 \
+	doc/ja_JP.eucJP/dhcp-options.5 \
+	doc/examples/dhclient-dhcpv6.conf \
+	doc/examples/dhcpd-dhcpv6.conf doc/devel/arch.dox \
+	doc/devel/atf.dox doc/devel/contrib.dox doc/devel/debug.dox \
+	doc/devel/isc-logo.jpg doc/devel/mainpage.dox \
+	doc/devel/omapi.dox doc/devel/qa.dox common/tests/Atffile \
+	server/tests/Atffile $(am__append_1)
 
+# Use an autoconf substitution vs an automake conditional here
+# to fool automake when the bind directory does not exist.
 SUBDIRS = @BINDSUBDIR@ includes tests common omapip client dhcpctl relay server
 nobase_include_HEADERS = dhcpctl/dhcpctl.h
 
 #
 # distcheck tuning
 #
-DISTCHECK_CONFIGURE_FLAGS = @DISTCHECK_ATF_CONFIGURE_FLAG@
+DISTCHECK_CONFIGURE_FLAGS = @DISTCHECK_ATF_CONFIGURE_FLAG@ \
+	@DISTCHECK_LIBBIND_CONFIGURE_FLAG@ $(am__empty)
 all: all-recursive
 
 .SUFFIXES:
@@ -864,7 +869,7 @@ uninstall-am: uninstall-nobase_includeHEADERS
 Makefile:
 
 distcheck-hook:
-	chmod u+w $(distdir)/bind
+@HAVE_BINDDIR_TRUE@	chmod u+w $(distdir)/bind
 
 distclean-local:
 	rm -f config.report
