--- a/configure.ac
+++ b/configure.ac
@@ -738,6 +738,7 @@ BINDLIBIRSDIR=
 BINDLIBDNSDIR=
 BINDLIBISCCFGDIR=
 BINDLIBISCDIR=
+DISTCHECK_LIBBIND_CONFIGURE_FLAG=
 AC_ARG_WITH(libbind,
 	AS_HELP_STRING([--with-libbind=PATH],[bind includes and libraries are in PATH]),
 	use_libbind="$withval", use_libbind="no")
@@ -784,6 +785,7 @@ no)
 	BINDLIBDNSDIR="$BINDDIR/lib"
 	BINDLIBISCCFGDIR="$BINDDIR/lib"
 	BINDLIBISCDIR="$BINDDIR/lib"	
+	DISTCHECK_LIBBIND_CONFIGURE_FLAG="--with-libbind=$use_libbind"
 	;;
 esac
 AC_SUBST(BINDSUBDIR)
@@ -793,6 +795,8 @@ AC_SUBST(BINDLIBIRSDIR)
 AC_SUBST(BINDLIBDNSDIR)
 AC_SUBST(BINDLIBISCCFGDIR)
 AC_SUBST(BINDLIBISCDIR)
+AC_SUBST(DISTCHECK_LIBBIND_CONFIGURE_FLAG)
+AM_CONDITIONAL(HAVE_BINDDIR, test "$use_libbind" = "no")
 
 # OpenLDAP support.
 AC_ARG_WITH(ldap,
